--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,17 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: 'Home'
+    url: /
+  # - title: 'About'
+  #   url: /about/
+  - title: 'Publications'
+    url: /publications/
+  - title: 'Research'
+    url: /research/
+  - title: 'Conferences'
+    url: /conferences/
+  # - title: "Quick-Start Guide"
+  #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
